syntax = "proto3";

package gprc;

option go_package = "../grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service UserHandler {
    rpc Login(LoginReq) returns (BasicUser) {
        option (google.api.http) = {
            post: "/users:login"
            body: "*"
        };
    };

    rpc Get(GetReq) returns (User) {
        option (google.api.http) = {
            get: "/users/{id}"
        };
    };
    
    rpc Create(CreateReq) returns (User) {
        option (google.api.http) = {
            post: "/users/"
            body: "*"
        };
    };

    rpc Update(UpdateReq) returns (User) {
        option (google.api.http) = {
            put: "/users/{id}"
            body: "*"
        };
    };

    rpc Delete(DeleteReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/users/{id}"
        };
    }
}

message LoginReq {
    string username = 1 [(validate.rules).message.required = true];
    string password = 2 [(validate.rules).message.required = true];
}

message GetReq {
    int32 id = 1;
}

message CreateReq {
    string name     = 1 [(validate.rules).message.required = true];
    string username = 2 [(validate.rules).message.required = true];
    string password = 3 [(validate.rules).message.required = true];
}

message UpdateReq {
    int32 id = 1 [(validate.rules).message.required = true];
    User new_user_infor = 2;
    repeated int32 tags_added = 3;
    repeated int32 tags_deleted = 4;
}

message DeleteReq {
    int32 id = 1;
}


message BasicUser {
    int32 id        = 1;
    string name     = 2;
    string username = 3;
    string password = 4;
}

message User {
    int32 id                               = 1;
    string name                            = 2;
    string username                        = 3;
    string password                        = 4;
    google.protobuf.Timestamp created_time = 5;
}